--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Create an article</h1>
+<h1>Editing Existing Article</h1>
+
 
 <% if @article.errors.any? %>
   <h2>The following errors preventd the article from getting created</h2>
